# arka-sentinel-distribution

./: README.md  pyproject.toml
docs/: architecture.md  example_rca.md  faq.md  roadmap.md
src/arka_sentinel/: __init__.py
