[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arka_sentinel"
version = "1.0.0"
description = "Privacy-First Pre-Commit Context Validation Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers",
    "cryptography"
]

[project.pypackages]
arka_sentinel = "src.arka_sentinel"
